--- a/Bin/imgui.ini
+++ b/Bin/imgui.ini
@@ -3,18 +3,13 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Sample window]
-Pos=11,41
-Size=314,640
-Collapsed=0
-
-[Window][My First Tool]
-Pos=1362,20
-Size=553,100
-Collapsed=0
-
 [Window][Game Options]
-Pos=2061,19
-Size=499,131
+Pos=1316,203
+Size=367,140
+Collapsed=0
+
+[Window][Terrain Editor]
+Pos=487,238
+Size=297,142
 Collapsed=0
 
