--- a/GameRTS/GameRTS.vcxproj.filters
+++ b/GameRTS/GameRTS.vcxproj.filters
@@ -50,6 +50,12 @@
     <ClCompile Include="Source\Externals\imgui-SFML.cpp">
       <Filter>Source Files\Externals</Filter>
     </ClCompile>
+    <ClCompile Include="Source\RTSMapGridWalker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\RTSBreadthFirstSearchMapGridWalker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\RTSUnitType.h">
@@ -68,6 +74,12 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Include\RTSWorld.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\RTSMapGridWalker.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\RTSBreadthFirstSearchMapGridWalker.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
