+ Added RTSMapTileNode   * Implemented all its methods * Implemented all RTSBreadthFirstSearchMapGridWalker methods   * MASSIVE memory leak caused by creating new instances of RTSMapTileNode

--- a/Bin/imgui.ini
+++ b/Bin/imgui.ini
@@ -5,11 +5,16 @@ Collapsed=0
 
 [Window][Game Options]
 Pos=1316,203
-Size=367,140
+Size=367,163
 Collapsed=0
 
 [Window][Terrain Editor]
 Pos=487,238
 Size=297,142
+Collapsed=0
+
+[Window][Path Finder]
+Pos=789,304
+Size=72,75
 Collapsed=0
 
