--- a/GameRTS/GameRTS.vcxproj.filters
+++ b/GameRTS/GameRTS.vcxproj.filters
@@ -56,7 +56,7 @@
     <ClCompile Include="Source\RTSBreadthFirstSearchMapGridWalker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source\RTSMapTile.cpp">
+    <ClCompile Include="Source\RTSMapTileNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -85,7 +85,7 @@
     <ClInclude Include="Include\RTSBreadthFirstSearchMapGridWalker.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="Include\RTSMapTile.h">
+    <ClInclude Include="Include\RTSMapTileNode.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
