--- a/GameRTS/GameRTS.vcxproj.filters
+++ b/GameRTS/GameRTS.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClCompile Include="Source\RTSMapTileNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RTSDepthFirstSearchMapGridWalker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\RTSUnitType.h">
@@ -86,6 +89,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Include\RTSMapTileNode.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\RTSDepthFirstSearchMapGridWalker.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
