--- a/GameRTS/GameRTS.vcxproj.filters
+++ b/GameRTS/GameRTS.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClCompile Include="RTSDepthFirstSearchMapGridWalker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\RTSBestFirstSearchMapGridWalker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\RTSUnitType.h">
@@ -92,6 +95,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Include\RTSDepthFirstSearchMapGridWalker.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\RTSBestFirstSearchMapGridWalker.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
