+ RTSDijkstraMapGridWalker added   * It kinda works * No more errors on closing

--- a/GameRTS/GameRTS.vcxproj
+++ b/GameRTS/GameRTS.vcxproj
@@ -168,7 +168,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="RTSDepthFirstSearchMapGridWalker.cpp" />
     <ClCompile Include="Source\Externals\imgui-SFML.cpp" />
     <ClCompile Include="Source\Externals\imgui.cpp" />
     <ClCompile Include="Source\Externals\imgui_demo.cpp" />
@@ -179,6 +178,8 @@
     <ClCompile Include="Source\RTSBestFirstSearchMapGridWalker.cpp" />
     <ClCompile Include="Source\RTSBreadthFirstSearchMapGridWalker.cpp" />
     <ClCompile Include="Source\RTSConfig.cpp" />
+    <ClCompile Include="Source\RTSDepthFirstSearchMapGridWalker.cpp" />
+    <ClCompile Include="Source\RTSDijkstraMapGridWalker.cpp" />
     <ClCompile Include="Source\RTSMapGridWalker.cpp" />
     <ClCompile Include="Source\RTSMapTileNode.cpp" />
     <ClCompile Include="Source\RTSTexture.cpp" />
@@ -192,6 +193,7 @@
     <ClInclude Include="Include\RTSBreadthFirstSearchMapGridWalker.h" />
     <ClInclude Include="Include\RTSConfig.h" />
     <ClInclude Include="Include\RTSDepthFirstSearchMapGridWalker.h" />
+    <ClInclude Include="Include\RTSDijkstraMapGridWalker.h" />
     <ClInclude Include="Include\RTSMapGridWalker.h" />
     <ClInclude Include="Include\RTSMapTileNode.h" />
     <ClInclude Include="Include\RTSTexture.h" />
