+ Added Unit class * Units can be created with a click

--- a/Bin/imgui.ini
+++ b/Bin/imgui.ini
@@ -5,16 +5,21 @@ Collapsed=0
 
 [Window][Game Options]
 Pos=1158,58
-Size=367,163
+Size=367,186
 Collapsed=0
 
 [Window][Terrain Editor]
-Pos=487,238
+Pos=1129,742
 Size=297,142
 Collapsed=0
 
 [Window][Path Finder]
 Pos=526,207
 Size=177,167
+Collapsed=0
+
+[Window][Unit Editor]
+Pos=474,233
+Size=149,97
 Collapsed=0
 
